--- a/app/views/splash/splash.html.erb
+++ b/app/views/splash/splash.html.erb
@@ -1,3 +1,10 @@
+<div class= "splash-container">
+
 <h1>NgalaBudgetApp</h1>
-<%= link_to 'Sign Up', new_user_registration_path %> |
-<%= link_to 'Log In', new_user_session_path %>
+<div class = splash-buttons>
+<span id ="login"><%= link_to 'Log In', new_user_session_path %></span>
+<span id ="signup"><%= link_to 'Sign Up', new_user_registration_path %></span>
+</div>
+
+</div>
+
