--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%= stylesheet_link_tag 'splash', media: 'all' %>
     <%= stylesheet_link_tag 'registrations', media: 'all' %>
     <%= stylesheet_link_tag 'sessions', media: 'all' %>
+    <%= stylesheet_link_tag 'category_css/index', media: 'all' %>
+    <%= stylesheet_link_tag 'business_css/index', media: 'all' %>
     <%= javascript_importmap_tags %>
   </head>
 
