--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -28,4 +28,4 @@
     <% end %>
   </ul>
 <% end %>
-<button><%= link_to "Add a new category", new_category_path %></button>
+<button><%= link_to "New category", new_category_path %></button>
