--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="signup-nav">
+<div class="signupm-nav">
   <%= image_tag("back-arrow.jpg", alt: "Back Arrow", id: "back-arrow") %>
   <h2>Sign Up</h2>
   <p id="next-button">Next</p>
