--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -1,5 +1,10 @@
-<h1>Add a New Business for <%= @category.name %></h1>
-
+<div class="signupm-nav">
+  <%= image_tag("back-arrow.jpg", alt: "Back Arrow", id: "back-arrow") %>
+  <h2>New Business</h2>
+  <p id="next-button">Next</p>
+</div>
+<h3 class = "back"><%= link_to 'Back', category_businesses_path(@category) %></h3>
+<h1 id = "heading">For <%= @category.name %> Category</h1>
 <%= form_with(model: [@category, @business], local: true) do |form| %>
   <% if @business.errors.any? %>
     <div id="error_explanation">
@@ -15,17 +20,15 @@
 
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field :name, required: true %>
+    <%= form.text_field :name, required: true, placeholder: "Name"%>
   </div>
 
   <div class="field">
     <%= form.label :amount %>
-    <%= form.number_field :amount, required: true %>
+    <%= form.number_field :amount, required: true, placeholder: "Amount"%>
   </div>
 
   <div class="actions">
-    <%= form.submit 'Create Business' %>
+   <button id = "save"><%= form.submit 'Save' %></button>
   </div>
 <% end %>
-
-<%= link_to 'Back to Businesses', category_businesses_path(@category) %>
