--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Category</h1>
+<div class="signupm-nav">
+  <%= image_tag("back-arrow.jpg", alt: "Back Arrow", id: "back-arrow") %>
+  <h2>New Cattegory</h2>
+  <p id="next-button">Next</p>
+</div>
 
+<h3 class = "back"><%= link_to 'Back', categories_path %></h3>
 <%= render 'form', category: @category %>
 
-<%= link_to 'Back', categories_path %>
+
