--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,21 +7,26 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { id: 'signup-form' }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+<div class="field">
+  <%= f.label :name %><br />
+  <%= f.text_field :name, autofocus: true, placeholder: "Full Name" ,required: true%>
+</div>
+
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", required: true %>
   </div>
 
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password" %>
+    <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password",  required: true %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm Password"%>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm Password",  required: true%>
   </div>
   
 <% end %>
@@ -39,7 +44,6 @@
     });
 
     backArrow.addEventListener('click', function() {
-      // Navigate back to the splash screen 
       window.location.href = '/';
     });
   });
