--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -1,13 +1,14 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-body{
-  background-color: rgb(240,242,241);
-  
+
+body {
+  background-color: rgb(240, 242, 241);
 }
-.splash-container{
+
+.splash-container {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -15,39 +16,45 @@ body{
   align-items: center;
   flex-direction: column;
 }
-.splash-container h1{
+
+.splash-container h1 {
   font-size: 2rem;
-  font-family: al;
   font-weight: 700;
-  color: rgb(66,76,83);
+  color: rgb(66, 76, 83);
   margin-top: 10rem;
 }
-.splash-buttons{
+
+.splash-buttons {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   margin-top: 160px;
 }
-span{
-border-radius: 4px;
+
+span {
+  border-radius: 4px;
   margin: 0 10px;
 }
+
 a {
   text-decoration: none;
-  text-wrap: nowrap;
 }
-#login{
-  background-color:rgb(56,120,194);
+
+#login {
+  background-color: rgb(56, 120, 194);
   padding: 10px 155px;
 }
-#signup{
+
+#signup {
   background-color: #fff;
   padding: 10px 150px;
 }
-#login a{
+
+#login a {
   color: #fff;
 }
-#signup a{
+
+#signup a {
   color: black;
 }
